--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_svg: ^0.14.4
   transparent_image: ^1.0.0
   cached_network_image: ^1.1.3
+  image_picker: ^0.6.1+11
 
 
 
